# socketsite

./: Cargo.toml
html/: index.html  main.css  main.js
src/: http.rs  http_responder.rs  main.rs  socket.rs
