[package]
name = "socketsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
byteorder = "1.4.3"
futures-util = "0.3.28"
mime_guess = "2.0.4"
sha1_smol = "1.0.0"
tokio = { version = "1.29.1", features = ["full"] }
